--- a/headhunting/composer.json
+++ b/headhunting/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"davispeixoto/laravel-4-solr": "dev-master"
+		"davispeixoto/laravel-4-solr": "dev-master",
+		"fairholm/elasticquent": "1.0.*"
 	},
 	"autoload": {
 		"classmap": [
